PMD warning: Avoid instantiating Boolean objects