@@ -314,7 +314,7 @@ public class QueuePlugin<T extends QueuePlugin<?>> extends GQuery {
       if (f != null) {
         if (f instanceof Function) {
           // pass jumpToEnd to Animation.onCancel() via the element's data object
-          $(elem).data(JUMP_TO_END, new Boolean(jumpToEnd));
+          $(elem).data(JUMP_TO_END, Boolean.valueOf(jumpToEnd));
           ((Function) f).cancel(elem);
           $(elem).removeData(JUMP_TO_END);
         }
